fixed the footer margin and a media query and fixed edit button opacity and gap

--- a/blocks/card.css
+++ b/blocks/card.css
@@ -26,6 +26,7 @@
   white-space: nowrap;
   overflow: hidden;
   max-width: 420px;
+  margin-left: 0;
 }
 
 .card__like-btn {
@@ -45,5 +46,10 @@
 @media screen and (max-width: 627px) {
   .card__image {
     height: 288px;
+  }
+}
+
+@media screen and (max-width: 250px) {
+  .card__title {
   }
 }
