--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -7,5 +7,5 @@
   text-align: center;
   opacity: 70%;
   padding-bottom: 60px;
-  margin-top: 60px;
+  margin: 60px 0 0;
 }
